fixed z-index in jquery-ui

--- a/app/stylesheets/sayt.sass
+++ b/app/stylesheets/sayt.sass
@@ -1,3 +1,4 @@
 .ui-autocomplete
   z-index: 100
   text-align: left
+  font-weight: bold
